--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,3 +28,20 @@ set -g repeat-time 500
 set -s escape-time 0
 set -g status-left ""
 set -g status-right ""
+
+# Alt+1..9 to select window 1..9
+bind-key -n M-1 select-window -t :1
+bind-key -n M-2 select-window -t :2
+bind-key -n M-3 select-window -t :3
+bind-key -n M-4 select-window -t :4
+bind-key -n M-5 select-window -t :5
+bind-key -n M-6 select-window -t :6
+bind-key -n M-7 select-window -t :7
+bind-key -n M-8 select-window -t :8
+bind-key -n M-9 select-window -t :9
+
+# Vim-like pane navigation with prefix (C-b) + h/j/k/l
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
